--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="icon" type="image/x-icon" href="/asset/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/asset/favicon.ico"  style="border-radius: 50%;" >
 
     <meta
       name="description"
